[gd_scene load_steps=2 format=3 uid="uid://csw5ewrnnjof7"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_snolc"]

[node name="GameUI" type="Node2D"]
script = ExtResource("1_snolc")

[node name="Exit" type="Button" parent="."]
offset_left = 13.0
offset_top = 16.0
offset_right = 50.0
offset_bottom = 47.0
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="Inventory" type="Button" parent="."]
offset_left = 1052.0
offset_top = 13.0
offset_right = 1135.0
offset_bottom = 44.0
text = "Inventory"
metadata/_edit_use_anchors_ = true

[node name="Main2D" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Main2D"]
position = Vector2(575, 327)

[node name="X" type="Button" parent="."]
offset_left = 139.0
offset_top = 135.0
offset_right = 157.0
offset_bottom = 166.0
text = "X"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="X" to="." method="_on_x_pressed"]
